src/objects/ISL_Webservice_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Store ISL Webservice configuration values</description>
    <fields>
        <fullName>Error_Log_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To turn on error logging for integration, set it to Checked otherwise Unchecked</description>
        <label>Error Log Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True when OIL webservice up and running otherwise False</description>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ISL Webservice Config</label>
</CustomObject>